[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/LessonDialog.gd" type="Script" id=1]
[ext_resource path="res://res/Helvetica_bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://tscn/ColorGrid.tscn" type="PackedScene" id=3]
[ext_resource path="res://tscn/Dialog.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="LessonDialog" instance=ExtResource( 4 )]
script = ExtResource( 1 )

[node name="Panel" parent="." index="1"]
margin_left = -300.0
margin_top = -340.0
margin_right = 300.0
margin_bottom = 340.0
rect_min_size = Vector2( 600, 680 )

[node name="Head" parent="Panel/VBoxContainer" index="0"]
margin_right = 600.0

[node name="Title" parent="Panel/VBoxContainer/Head" index="0"]
text = "Nouveau cours"

[node name="Body" parent="Panel/VBoxContainer" index="1"]
margin_right = 600.0
margin_bottom = 630.0
rect_pivot_offset = Vector2( -912.859, -210.385 )

[node name="VboxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/Body" index="0"]
margin_left = 25.0
margin_top = 21.0
margin_right = 575.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 32

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/Body/VboxContainer" index="0"]
margin_right = 550.0
margin_bottom = 480.0
rect_min_size = Vector2( 550, 480 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer" index="0"]
margin_right = 484.0
margin_bottom = 514.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 2

[node name="TypeLabel" type="Label" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer" index="0"]
margin_top = 8.0
margin_right = 129.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Type de cours :"

[node name="TypeOptionButton" type="OptionButton" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer" index="1"]
margin_left = 149.0
margin_right = 484.0
margin_bottom = 30.0
rect_min_size = Vector2( 220, 30 )
text = "Travaux Dirigés"
clip_text = true
align = 1
items = [ "Travaux Dirigés", null, false, 0, null, "Cours Magistral", null, false, 1, null ]
selected = 0

[node name="SubjectLabel" type="Label" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer" index="2"]
margin_top = 58.0
margin_right = 129.0
margin_bottom = 72.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Matière :"

[node name="SubjectOptionButton" type="OptionButton" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer" index="3"]
margin_left = 149.0
margin_top = 50.0
margin_right = 484.0
margin_bottom = 80.0
rect_min_size = Vector2( 220, 30 )
text = "Aucune matière trouvée"
clip_text = true
align = 1

[node name="LessonLabel" type="Label" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer" index="4"]
margin_top = 108.0
margin_right = 129.0
margin_bottom = 122.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Nom du cours :"

[node name="LessonOptionButton" type="OptionButton" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer" index="5"]
margin_left = 149.0
margin_top = 100.0
margin_right = 484.0
margin_bottom = 130.0
rect_min_size = Vector2( 220, 30 )
text = "Aucun cours trouvé"
clip_text = true
align = 1

[node name="RoomLabel" type="Label" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer" index="6"]
margin_top = 158.0
margin_right = 129.0
margin_bottom = 172.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Salle :"

[node name="RoomLineEdit" type="LineEdit" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer" index="7"]
margin_left = 149.0
margin_top = 150.0
margin_right = 484.0
margin_bottom = 180.0
rect_min_size = Vector2( 220, 30 )
align = 1
placeholder_text = "Entrez un nom de salle (optionnel)"

[node name="LessonDurationLabel" type="Label" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer" index="8"]
margin_top = 208.0
margin_right = 129.0
margin_bottom = 222.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Durée du cours :"

[node name="LessonDuration" type="HBoxContainer" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer" index="9"]
margin_left = 149.0
margin_top = 200.0
margin_right = 484.0
margin_bottom = 230.0
custom_constants/separation = 11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoursOptionButton" type="OptionButton" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer/LessonDuration" index="0"]
margin_right = 60.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 30 )
text = "0"
align = 1
items = [ "0", null, false, 0, null, "1", null, false, 1, null, "2", null, false, 2, null, "3", null, false, 3, null, "4", null, false, 4, null, "5", null, false, 5, null, "6", null, false, 6, null, "7", null, false, 7, null, "8", null, false, 8, null ]
selected = 0

[node name="HLabel" type="Label" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer/LessonDuration" index="1"]
margin_left = 71.0
margin_top = 8.0
margin_right = 123.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "heure(s)"

[node name="MinutesOptionButton" type="OptionButton" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer/LessonDuration" index="2"]
margin_left = 134.0
margin_right = 194.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 30 )
text = "00"
align = 1
items = [ "00", null, false, 0, null, "15", null, false, 1, null, "30", null, false, 2, null, "45", null, false, 3, null ]
selected = 0

[node name="MLabel" type="Label" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer/LessonDuration" index="3"]
margin_left = 205.0
margin_top = 8.0
margin_right = 266.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "minute(s)"

[node name="ScheduleLabel" type="Label" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer" index="10"]
margin_top = 258.0
margin_right = 129.0
margin_bottom = 272.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Horaire :"

[node name="Schedule" type="HBoxContainer" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer" index="11"]
margin_left = 149.0
margin_top = 250.0
margin_right = 484.0
margin_bottom = 280.0
custom_constants/separation = 11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DaysOptionButton" type="OptionButton" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer/Schedule" index="0"]
margin_right = 120.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 30 )
text = "Lundi"
align = 1
items = [ "Lundi", null, false, 0, null, "Mardi", null, false, 1, null, "Mercredi", null, false, 2, null, "Jeudi", null, false, 3, null, "Vendredi", null, false, 4, null, "Samedi", null, false, 5, null ]
selected = 0

[node name="BeginingLabel" type="Label" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer/Schedule" index="1"]
margin_left = 131.0
margin_top = 8.0
margin_right = 174.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Début:"

[node name="HoursOptionButton" type="OptionButton" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer/Schedule" index="2"]
margin_left = 185.0
margin_right = 245.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 30 )
text = "7"
align = 1
items = [ "7", null, false, 0, null, "8", null, false, 1, null, "9", null, false, 2, null, "10", null, false, 3, null, "11", null, false, 4, null, "12", null, false, 5, null, "13", null, false, 6, null, "14", null, false, 7, null, "15", null, false, 8, null, "16", null, false, 9, null, "17", null, false, 10, null, "18", null, false, 11, null, "19", null, false, 12, null, "20", null, false, 13, null, "21", null, false, 14, null ]
selected = 0

[node name="HourLabel" type="Label" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer/Schedule" index="3"]
margin_left = 256.0
margin_top = 8.0
margin_right = 264.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "h"

[node name="MinutesOptionButton" type="OptionButton" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer/Schedule" index="4"]
margin_left = 275.0
margin_right = 335.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 30 )
text = "00"
align = 1
items = [ "00", null, false, 0, null, "15", null, false, 1, null, "30", null, false, 2, null, "45", null, false, 3, null ]
selected = 0

[node name="ObligatoryLabel" type="Label" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer" index="12"]
margin_top = 313.0
margin_right = 129.0
margin_bottom = 327.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Obligatoire :"

[node name="ObligatoryCheckButton" type="CheckButton" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer" index="13"]
margin_left = 149.0
margin_top = 300.0
margin_right = 225.0
margin_bottom = 340.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TeacherLabel" type="Label" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer" index="14"]
margin_top = 368.0
margin_right = 129.0
margin_bottom = 382.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Professeur :"

[node name="TeacherLineEdit" type="LineEdit" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer" index="15"]
margin_left = 149.0
margin_top = 360.0
margin_right = 484.0
margin_bottom = 390.0
rect_min_size = Vector2( 220, 30 )
align = 1
placeholder_text = "Nom du professeur (optionnel)"

[node name="LessonCodeLabel" type="Label" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer" index="16"]
margin_top = 418.0
margin_right = 129.0
margin_bottom = 432.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Identifiant du cours:"

[node name="LessonCodeLineEdit" type="LineEdit" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer" index="17"]
margin_left = 149.0
margin_top = 410.0
margin_right = 484.0
margin_bottom = 440.0
rect_min_size = Vector2( 220, 30 )
align = 1
placeholder_text = "(optionnel)"

[node name="ColorLabel" type="Label" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer" index="18"]
margin_top = 480.0
margin_right = 129.0
margin_bottom = 494.0
custom_colors/font_color = Color( 0.219608, 0.219608, 0.219608, 1 )
text = "Couleur :"

[node name="ColorGrid" parent="Panel/VBoxContainer/Body/VboxContainer/ScrollContainer/GridContainer" index="19" instance=ExtResource( 3 )]

[node name="Notification" type="Label" parent="Panel/VBoxContainer/Body/VboxContainer" index="1"]
margin_top = 512.0
margin_right = 550.0
margin_bottom = 543.0
custom_colors/font_color = Color( 0.662745, 0, 0, 1 )
text = "Aucune matière/cours n'a été enregistrée ! Vous devez d'abord créer une matière et définir un titre de cours dans le Gestionnaire de matières et de cours"
align = 1
valign = 1
autowrap = true

[node name="Foot" parent="Panel/VBoxContainer" index="2"]
margin_top = 630.0
margin_right = 600.0
margin_bottom = 680.0
rect_min_size = Vector2( 0, 50 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Foot" index="0"]
margin_left = 240.0
margin_top = 10.0
margin_right = 360.0
margin_bottom = 40.0

[node name="CancelButton" type="Button" parent="Panel/VBoxContainer/Foot/HBoxContainer" index="0"]
margin_right = 120.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 30 )
custom_colors/font_color = Color( 0.235294, 0.498039, 1, 1 )
custom_colors/font_color_hover = Color( 0.223529, 0.717647, 0.988235, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Annuler"

[connection signal="pressed" from="Panel/VBoxContainer/Foot/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
